--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@blackbox-vision/ra-language-spanish": "^3.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ra-strapi-rest": "^0.1.3",
     "react": "^16.9.0",
+    "react-admin": "^3.7.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.4.1"
   },
